styles.css
@font-face {
  font-family: Kosugi Maru; /* set name */
  src: url(fonts/KosugiMaru-Regular.ttf); /* url of the font */
}

/* text selection */
*::selection { 
    color: #ecbdcd;
}

/* links */
a:hover {
  color: rgb(255, 187, 214);
  cursor: url(./cursors/pointer.cur), pointer;
}
a {
    color:rgb(196, 132, 158);
    text-decoration: none;
}

body {
    scroll-behavior: smooth !important;
    cursor: url(./cursors/default.cur), auto;
    background-color: #00000000;
}

/* crt effect */
body::before {
    content: " ";
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background: linear-gradient(#ffffff00 50%, #00000005 50%), linear-gradient(90deg, #f0f0f000, #00ff0005, #0000ff08);
    z-index: 1;
    background-size: 100% 2px, 3px 100%;
    pointer-events: none
}


/*--------------------------------------------------*/
/* main box */
.box {
    width: 600px;
    height: 435px;
    border: 1px solid #c5c5c5;
    background-image: radial-gradient(rgb(255, 255, 255) 22%, transparent 28%),
    radial-gradient(rgb(255, 255, 255) 22%, transparent 28%);
    background-position: 0px 0px, 10px 10px;
    background-size: 20px 20px;
    background-color: rgb(245, 245, 245);
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
    padding: 0px;
    margin: auto;
    display: flex;
    justify-content: center;
    align-items: center;
}

.box2 {
    width: 535px;
    height: 370px;
    background-color: rgb(255, 255, 255);
    margin: auto;
    border-radius: 7px;
    border: 15px solid transparent;
    border-style: solid;
    position: absolute;
}

.box1 {
    width: 535px;
    height: 370px;
    background-color: rgb(255, 255, 255, 0.3);
    margin: auto;
    background-image: url(./images/chii.jpg);
    background-size: 260px;
    background-position-x: -20px;
    background-position-y: 40px;
    background-blend-mode: lighten;
    background-repeat: no-repeat;
    border-radius: 7px;
    border: 15px solid transparent;
    border-image-source: url(./images/lace-g.png) !important;
    border-image-slice: 5 !important;
    border-image-width: 6px !important;
    border-image-repeat: round !important;
    border-style: solid;
    border-image-outset: 2px;
    position: relative;

}

.box1 > h2 {
    font-size: 45px;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    color: #808080;
    font-weight: 400;
    font-style: normal;
    text-align: center;
    margin-top: -5px;
}

.tab {
    width: 602px;
    height: 35px;
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    margin: auto;
    margin-top: 100px;
    margin-bottom: 0px;
    padding: 0px;
    background-color: #c1c1c1;
}

.tab > p {
    padding-left: 15px;
    padding-right: 15px;
    padding-top: 6px;
    font-size: 20px;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    color: white;
    font-weight: 500;
}

#undertxt {
    font-size: 12px;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    color: rgba(0, 0, 0, 0.217);
    text-align: center;
    margin: 0;
}

/*--------------------------------------------------*/
/* buttons */
.wip1 {
    flex: 50%;
    margin: auto;
    background: url(./images/wingl.gif) no-repeat center;
    background-size: 70px;
    width: 70px;
    height: 60px;
    cursor: pointer;
    border: none;
    padding: 0;
    border-radius: 30%;
    /* transition: all 0.3s ease-in-out; */
    /* margin-right: 30px; */
    cursor: url(./cursors/pointer.cur), pointer;
    margin: auto;
    position: absolute;
    top: 50%;
    left: 25%;
    
}

.hide {
    display: none;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    font-size: 20px;
    background-color: #ffe6ef;
    color: white;
    border-radius: 3px;
    text-align: center;
    width: 80px;
    position: absolute;
    top: 67%;
    left: 25%;
    margin: auto;
}

.wip1:hover {
    transform: scale(1.1);
}

.wip1:hover + .hide {
    display: block;
}

.about {
    flex: 50%;
    margin: auto;
    background: url(./images/bow.gif) no-repeat center;
    background-size: 63px;
    width: 63px;
    height: 63px;
    cursor: pointer;
    border: none;
    padding: 0;
    /* transition: all 0.3s ease-in-out; */
    /* margin-right: 30px; */
    cursor: url(./cursors/pointer.cur), pointer;
    margin: auto;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%);
    
}

.hide3 {
    display: none;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    font-size: 20px;
    background-color: #ffe6ef;
    color: white;
    border-radius: 3px;
    text-align: center;
    width: 80px;
    position: absolute;
    top: 68%;
    left: 50%;
    transform: translateX(-50%);
    margin: auto;
}

.about:hover {
    transform: translateX(-50%) scale(1.1);
}

.about:hover + .hide3 {
    display: block;
}


.wip2 {
    flex: 50%;
    margin: auto;
    background: url(./images/wingr.gif) no-repeat center;
    background-size: 70px;
    width: 70px;
    height: 60px;
    cursor: pointer;
    border: none;
    padding: 0;
    border-radius: 30%;
    /* transition: all 0.3s ease-in-out; */
    cursor: url(./cursors/pointer.cur), pointer;
    position: absolute;
    margin: auto;
    top: 50%;
    right: 25%;
}

.hide2 {
    display: none;
    font-family: "Kosugi Maru", Helvetica Neue, Helvetica, Arial, sans-serif;
    font-size: 20px;
    background-color: #ffe6ef;
    color: white;
    border-radius: 3px;
    text-align: center;
    width: 80px;
    position: absolute;
    top: 67%;
    right: 25%;
    margin: auto;
}

.wip2:hover {
    transform: scale(1.1);
}

.wip2:hover + .hide2 {
    display: block;
}
/* ... */

